Estructura y estilos en botones

--- a/figuras.html
+++ b/figuras.html
@@ -23,8 +23,10 @@
           <label for="InputCuadrado" class="figure__label">Cuánto mide cada lado de tu cuadrado:</label>
           <input id="InputCuadrado" type="number" placeholder="Ingresar número" class="figure__input">
           <label class="figure__label">Calcular</label>
-          <button type="button" onclick="calcularPerimetroCuadrado()" class="btn">Prímetro</button>
-          <button type="button" onclick="calcularAreaCuadrado()" class="btn">Área</button>
+          <div class="figure__btn">
+            <button type="button" onclick="calcularPerimetroCuadrado()" class="btn">Prímetro</button>
+            <button type="button" onclick="calcularAreaCuadrado()" class="btn">Área</button>
+          </div>
         </form>
       </section>
     </section>
