--- a/figuras.html
+++ b/figuras.html
@@ -21,7 +21,7 @@
         <div class="figure__number">0</div>
         <form class="form">
           <label for="InputCuadrado" class="figure__label">Cuánto mide cada lado de tu cuadrado:</label>
-          <input id="InputCuadrado" type="number" placeholder="Ingresar número" class="figure__input">
+          <input id="InputCuadrado" type="number" placeholder="Ingresar número" class="input">
           <label class="figure__label">Calcular</label>
           <div class="figure__btn">
             <button type="button" onclick="calcularPerimetroCuadrado()" class="btn">Prímetro</button>
