Estilos para tarjeta completa

--- a/figuras.html
+++ b/figuras.html
@@ -20,9 +20,9 @@
       <section class="card">
         <div class="figure__number">0</div>
         <form class="form">
-          <label for="InputCuadrado" class="figure__label">Cuánto mide cada lado de tu cuadrado:</label>
+          <label for="InputCuadrado" class="label">Cuánto mide cada lado de tu cuadrado:</label>
           <input id="InputCuadrado" type="number" placeholder="Ingresar número" class="input">
-          <label class="figure__label">Calcular</label>
+          <label class="label">Calcular:</label>
           <div class="figure__btn">
             <button type="button" onclick="calcularPerimetroCuadrado()" class="btn">Prímetro</button>
             <button type="button" onclick="calcularAreaCuadrado()" class="btn">Área</button>
