Estilos para títulos

--- a/figuras.html
+++ b/figuras.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header class="header">
-    <h1 class="title">
+    <h1 class="title header__title">
       Figuras geométricas
     </h1>
   </header>
