Estilos al footer

--- a/figuras.html
+++ b/figuras.html
@@ -33,7 +33,7 @@
   </main>
   <footer class="footer">
     <div class="credits">
-      <a href="https://graceana.com" target="_blank">@graceanax</a> - <script>document.write(new Date().getFullYear())</script>
+      <a href="https://graceana.com" target="_blank" class="link">@graceanax</a> - <script>document.write(new Date().getFullYear())</script>
     </div>
   </footer>
   <script src="./figuras.js"></script>
