Calculo de cuadrado con nueva vista

--- a/figuras.html
+++ b/figuras.html
@@ -18,7 +18,7 @@
     <section class="figure">
       <h2 class="title figure__title">Cuadrado</h2>
       <section class="card">
-        <div class="figure__number">0</div>
+        <div class="figure__number" id="ResultCuadrado">0</div>
         <form class="form">
           <label for="InputCuadrado" class="label">Cuánto mide cada lado de tu cuadrado:</label>
           <input id="InputCuadrado" type="number" placeholder="Ingresar número" class="input">
