--- a/figuras.html
+++ b/figuras.html
@@ -20,12 +20,28 @@
       <section class="card">
         <div class="figure__number" id="ResultCuadrado">0</div>
         <form class="form">
-          <label for="InputCuadrado" class="label">Cuánto mide cada lado de tu cuadrado:</label>
+          <label for="InputCuadrado" class="label">Cuánto mide cada lado del cuadrado:</label>
           <input id="InputCuadrado" type="number" placeholder="Ingresar número" class="input">
           <label class="label">Calcular:</label>
           <div class="figure__btn">
             <button type="button" onclick="calcularPerimetroCuadrado()" class="btn">Prímetro</button>
             <button type="button" onclick="calcularAreaCuadrado()" class="btn">Área</button>
+          </div>
+        </form>
+      </section>
+    </section>
+    <!-- Cálculo de círculo -->
+    <section class="figure">
+      <h2 class="title figure__title">Círculo</h2>
+      <section class="card">
+        <div class="figure__number" id="ResultCirculo">0</div>
+        <form class="form">
+          <label for="InputCirculo" class="label">Cuánto mide el radio del círculo:</label>
+          <input id="InputCirculo" type="number" placeholder="Ingresar número" class="input">
+          <label class="label">Calcular:</label>
+          <div class="figure__btn">
+            <button type="button" onclick="calcularPerimetroCirculo()" class="btn">Prímetro</button>
+            <button type="button" onclick="calcularAreaCirculo()" class="btn">Área</button>
           </div>
         </form>
       </section>
