Cambio de labels

--- a/figuras.html
+++ b/figuras.html
@@ -20,7 +20,7 @@
       <section class="card">
         <div class="figure__number" id="ResultCuadrado">0</div>
         <form class="form">
-          <label for="InputCuadrado" class="label">Cuánto mide cada lado del cuadrado:</label>
+          <label for="InputCuadrado" class="label">Lado:</label>
           <input id="InputCuadrado" type="number" placeholder="Ingresar número" class="input">
           <label class="label">Calcular:</label>
           <div class="figure__btn">
@@ -36,7 +36,7 @@
       <section class="card">
         <div class="figure__number" id="ResultCirculo">0</div>
         <form class="form">
-          <label for="InputCirculo" class="label">Cuánto mide el radio del círculo:</label>
+          <label for="InputCirculo" class="label">Radio:</label>
           <input id="InputCirculo" type="number" placeholder="Ingresar número" class="input">
           <label class="label">Calcular:</label>
           <div class="figure__btn">
@@ -52,13 +52,13 @@
       <section class="card">
         <div class="figure__number" id="ResultTriangulo">0</div>
         <form class="form">
-          <label for="InputTrianguloBase" class="label">Cuánto mide la base:</label>
+          <label for="InputTrianguloBase" class="label">Base:</label>
           <input id="InputTrianguloBase" type="number" placeholder="Ingresar número" class="input">
-          <label for="InputTrianguloAltura" class="label">Cuánto mide la altura:</label>
+          <label for="InputTrianguloAltura" class="label">Altura:</label>
           <input id="InputTrianguloAltura" type="number" placeholder="Ingresar número" class="input">
-          <label for="InputTrianguloLado1" class="label">Cuánto mide el lado 1:</label>
+          <label for="InputTrianguloLado1" class="label">Lado 1:</label>
           <input id="InputTrianguloLado1" type="number" placeholder="Ingresar número" class="input">
-          <label for="InputTrianguloLado2" class="label">Cuánto mide el lado 2:</label>
+          <label for="InputTrianguloLado2" class="label">Lado 2:</label>
           <input id="InputTrianguloLado2" type="number" placeholder="Ingresar número" class="input">
           <label class="label">Calcular:</label>
           <div class="figure__btn">
