--- a/figuras.html
+++ b/figuras.html
@@ -74,6 +74,6 @@
       <a href="https://graceana.com" target="_blank" class="link">@graceanax</a> - <script>document.write(new Date().getFullYear())</script>
     </div>
   </footer>
-  <script src="./figuras.js"></script>
+  <script src="./assets/js/figuras.js"></script>
 </body>
 </html>
