Funcionalidad de descuentos terminada incluida en html

--- a/descuentos.html
+++ b/descuentos.html
@@ -18,6 +18,7 @@
     <section>
         <h2 class="subtitle">Calcula el precio a pagar con descuento</h2>
         <section class="card">
+            <div class="figure__number" id="ResultPrice">0.00</div>
             <form class="form">
               <label for="InputPrice" class="label">Precio original: </label>
               <input id="InputPrice" type="number" placeholder="Ingresar número" class="input">
