Estandarización de estilos en figuras y descuentos

--- a/descuentos.html
+++ b/descuentos.html
@@ -25,7 +25,7 @@
               <label for="InputDiscount" class="label">Porcentaje de descuento:</label>
               <input id="InputDiscount" type="number" placeholder="Ingresar número" class="input">
               <label class="label">Calcular:</label>
-              <div class="figure__btn">
+              <div class="card__btn btn-1">
                 <button type="button" onclick="obtenerPrecioConDescuento()" class="btn">Calculr precio con descuento</button>
               </div>
             </form>
