--- a/figuras.html
+++ b/figuras.html
@@ -9,21 +9,21 @@
 </head>
 <body>
   <header class="header">
-    <h1 class="title header__title">
+    <h1 class="title">
       Figuras geométricas
     </h1>
   </header>
   <main class="main">
     <!-- Cálculo de cuadrado -->
     <section class="figure">
-      <h2 class="title figure__title">Cuadrado</h2>
+      <h2 class="subtitle">Cuadrado</h2>
       <section class="card">
         <div class="figure__number" id="ResultCuadrado">0</div>
         <form class="form">
           <label for="InputCuadrado" class="label">Lado:</label>
           <input id="InputCuadrado" type="number" placeholder="Ingresar número" class="input">
           <label class="label">Calcular:</label>
-          <div class="figure__btn">
+          <div class="card__btn btn-2">
             <button type="button" onclick="calcularPerimetroCuadrado()" class="btn">Prímetro</button>
             <button type="button" onclick="calcularAreaCuadrado()" class="btn">Área</button>
           </div>
@@ -32,14 +32,14 @@
     </section>
     <!-- Cálculo de círculo -->
     <section class="figure">
-      <h2 class="title figure__title">Círculo</h2>
+      <h2 class="subtitle">Círculo</h2>
       <section class="card">
         <div class="figure__number" id="ResultCirculo">0</div>
         <form class="form">
           <label for="InputCirculo" class="label">Radio:</label>
           <input id="InputCirculo" type="number" placeholder="Ingresar número" class="input">
           <label class="label">Calcular:</label>
-          <div class="figure__btn">
+          <div class="card__btn btn-2">
             <button type="button" onclick="calcularPerimetroCirculo()" class="btn">Prímetro</button>
             <button type="button" onclick="calcularAreaCirculo()" class="btn">Área</button>
           </div>
@@ -48,7 +48,7 @@
     </section>
     <!-- Cálculo de círculo -->
     <section class="figure">
-      <h2 class="title figure__title">Tríangulo</h2>
+      <h2 class="subtitle">Tríangulo</h2>
       <section class="card">
         <div class="figure__number" id="ResultTriangulo">0</div>
         <form class="form">
@@ -61,7 +61,7 @@
           <label for="InputTrianguloLado2" class="label">Lado 2:</label>
           <input id="InputTrianguloLado2" type="number" placeholder="Ingresar número" class="input">
           <label class="label">Calcular:</label>
-          <div class="figure__btn">
+          <div class="card__btn btn-2">
             <button type="button" onclick="calcularPerimetroTriangulo()" class="btn">Prímetro</button>
             <button type="button" onclick="calcularAreaTriangulo()" class="btn">Área</button>
           </div>
